--- a/airbyte-integrations/connectors/source-survey-sparrow/source_survey_sparrow/survey_sparrow.yaml
+++ b/airbyte-integrations/connectors/source-survey-sparrow/source_survey_sparrow/survey_sparrow.yaml
@@ -1,35 +1,111 @@
 version: "0.1.0"
 
 definitions:
+  page_size: 50
   selector:
     extractor:
-      field_pointer: []
+      field_pointer: ["data"]
   requester:
-    url_base: "https://example.com"
+    url_base: "https://eu-api.surveysparrow.com/v3"
     http_method: "GET"
     authenticator:
       type: BearerAuthenticator
-      api_token: "{{ config['api_key'] }}"
+      api_token: "{{ config['access_token'] }}"
   retriever:
     record_selector:
       $ref: "*ref(definitions.selector)"
     paginator:
-      type: NoPagination
+      type: "DefaultPaginator"
+      page_size_option:
+        inject_into: "request_parameter"
+        field_name: "limit"
+      pagination_strategy:
+        type: "PageIncrement"
+        page_size: "*ref(definitions.page_size)"
+      page_token_option:
+        inject_into: "request_parameter"
+        field_name: "page"
+      url_base: "*ref(definitions.requester.url_base)"
     requester:
       $ref: "*ref(definitions.requester)"
   base_stream:
     retriever:
       $ref: "*ref(definitions.retriever)"
-  customers_stream:
+  contacts_stream:
     $ref: "*ref(definitions.base_stream)"
     $options:
-      name: "customers"
+      name: "contacts"
       primary_key: "id"
-      path: "/example"
+      path: "/contacts"
+  contact_lists_stream:
+    $ref: "*ref(definitions.base_stream)"
+    $options:
+      name: "contact_lists"
+      primary_key: "id"
+      path: "/contact_lists"
+    paginator:
+      type: "NoPagination"
+  questions_stream:
+    $ref: "*ref(definitions.base_stream)"
+    $options:
+      name: "questions"
+      primary_key: "id"
+      path: "/questions"
+    retriever:
+      $ref: "*ref(definitions.base_stream.retriever)"
+      requester:
+        $ref: "*ref(definitions.requester)"
+        request_options_provider:
+          request_parameters:
+            survey_id: "{{ config['survey_id'] }}"
+  responses_stream:
+    $ref: "*ref(definitions.base_stream)"
+    $options:
+      name: "responses"
+      primary_key: "id"
+      path: "/responses"
+    retriever:
+      $ref: "*ref(definitions.base_stream.retriever)"
+      requester:
+        $ref: "*ref(definitions.requester)"
+        request_options_provider:
+          request_parameters:
+            survey_id: "{{ config['survey_id'] }}"
+  roles_stream:
+    $ref: "*ref(definitions.base_stream)"
+    $options:
+      name: "roles"
+      primary_key: "id"
+      path: "/roles"
+  surveys_stream:
+    $ref: "*ref(definitions.base_stream)"
+    $options:
+      name: "surveys"
+      primary_key: "id"
+      path: "/surveys"
+  survey_folders_stream:
+    $ref: "*ref(definitions.base_stream)"
+    $options:
+      name: "survey_folders"
+      primary_key: "id"
+      path: "/survey_folders"
+  users_stream:
+    $ref: "*ref(definitions.base_stream)"
+    $options:
+      name: "users"
+      primary_key: "id"
+      path: "/users"
 
 streams:
-  - "*ref(definitions.customers_stream)"
+  - "*ref(definitions.contacts_stream)"
+  - "*ref(definitions.contact_lists_stream)"
+  - "*ref(definitions.questions_stream)"
+  - "*ref(definitions.responses_stream)"
+  - "*ref(definitions.roles_stream)"
+  - "*ref(definitions.surveys_stream)"
+  - "*ref(definitions.survey_folders_stream)"
+  - "*ref(definitions.users_stream)"
 
 check:
   stream_names:
-    - "customers"
+    - "roles"
