--- a/airbyte-integrations/connectors/source-survey-sparrow/source_survey_sparrow/spec.yaml
+++ b/airbyte-integrations/connectors/source-survey-sparrow/source_survey_sparrow/spec.yaml
@@ -1,4 +1,4 @@
-documentationUrl: https://developers.surveysparrow.com/
+documentationUrl: https://docs.airbyte.com/integrations/sources/surveysparrow
 connectionSpecification:
   $schema: http://json-schema.org/draft-07/schema#
   title: Survey Sparrow Spec
