--- a/airbyte-integrations/connectors/source-auth0/source_auth0/spec.yaml
+++ b/airbyte-integrations/connectors/source-auth0/source_auth0/spec.yaml
@@ -1,11 +1,13 @@
-documentationUrl: https://auth0.com/docs/api/management/v2/
+documentationUrl: https://docs.airbyte.com/integrations/sources/auth0
 connectionSpecification:
   $schema: http://json-schema.org/draft-07/schema#
   title: Auth0 Management API Spec
   type: object
   required:
     - base_url
-    - credentials
+    - client_id
+    - client_secret
+    - audience
   additionalProperties: true
   properties:
     base_url:
@@ -13,67 +15,31 @@ connectionSpecification:
       title: Base URL
       examples:
         - "https://dev-yourOrg.us.auth0.com/"
-      description: The Authentication API is served over HTTPS. All URLs referenced in the documentation have the following base `https://YOUR_DOMAIN`
-    credentials:
-      title: Authentication Method
-      type: object
-      oneOf:
-        - type: object
-          title: OAuth2 Confidential Application
-          required:
-            - auth_type
-            - client_id
-            - client_secret
-            - audience
-          properties:
-            auth_type:
-              type: string
-              title: Authentication Method
-              const: oauth2_confidential_application
-              order: 0
-            client_id:
-              title: Client ID
-              description: >-
-                Your application's Client ID. You can find this value on the <a
-                href="https://manage.auth0.com/#/applications">application's settings tab</a>
-                after you login the admin portal.
-              type: string
-              examples:
-                - "Client_ID"
-            client_secret:
-              title: Client Secret
-              description: >-
-                Your application's Client Secret. You can find this value on the <a
-                href="https://manage.auth0.com/#/applications">application's settings tab</a>
-                after you login the admin portal.
-              type: string
-              examples:
-                - "Client_Secret"
-              airbyte_secret: true
-            audience:
-              title: Audience
-              description: >-
-                The audience for the token, which is your API. You can find this in the Identifier field on your  <a
-                href="https://manage.auth0.com/#/apis">API's settings tab</a>
-              type: string
-              examples:
-                - https://dev-yourOrg.us.auth0.com/api/v2/
-        - type: object
-          title: OAuth2 Access Token
-          required:
-            - access_token
-            - auth_type
-          properties:
-            auth_type:
-              type: string
-              title: Authentication Method
-              const: oauth2_access_token
-              order: 0
-            access_token:
-              title: OAuth2 Access Token
-              description: >-
-                Also called <a
-                href="https://auth0.com/docs/secure/tokens/access-tokens/get-management-api-access-tokens-for-testing">API Access Token </a>
-                The access token used to call the Auth0 Management API Token. It's a JWT that contains specific grant permissions knowns as scopes.
-              type: string
-              airbyte_secret: true
+      description: The Authentication API is served over HTTPS. All URLs referenced in the documentation have the following base `https://YOUR_DOMAIN.us.auth0.com`
+    client_id:
+      title: Client ID
+      description: >-
+        Your application's Client ID. You can find this value on the <a
+        href="https://manage.auth0.com/#/applications">application's settings tab</a>
+        after you login the admin portal.
+      type: string
+      examples:
+        - "Client_ID"
+    client_secret:
+      title: Client Secret
+      description: >-
+        Your application's Client Secret. You can find this value on the <a
+        href="https://manage.auth0.com/#/applications">application's settings tab</a>
+        after you login the admin portal.
+      type: string
+      examples:
+        - "Client_Secret"
+      airbyte_secret: true
+    audience:
+      title: Audience
+      description: >-
+        The audience for the token, which is your API. You can find this in the Identifier field on your <a
+        href="https://manage.auth0.com/#/apis">API's settings tab</a>
+      type: string
+      examples:
+        - https://dev-yourOrg.us.auth0.com/api/v2/
